# tombi

./: AGENTS.md  Cargo.toml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md
crates/tombi-accessor/src/: accessor.rs  schema_accessor.rs
crates/tombi-ast-editor/src/: edit.rs  editor.rs
crates/tombi-ast/src/: comment_directive.rs
crates/tombi-cache/src/: error.rs  lib.rs
crates/tombi-cli-options/src/: verbose.rs
crates/tombi-comment-directive/src/: document.rs  lib.rs  value.rs
crates/tombi-config/src/: files.rs  format.rs  lib.rs  lint.rs  schema.rs  server.rs
crates/tombi-date-time/src/: local_date.rs  local_date_time.rs  local_time.rs  offset.rs  offset_date_time.rs  private.rs
crates/tombi-diagnostic/: Cargo.toml
crates/tombi-diagnostic/src/: level.rs  (+1 more)
crates/tombi-extension/: Cargo.toml
crates/tombi-formatter/: Cargo.toml
crates/tombi-formatter/src/: formatter.rs  lib.rs  types.rs
crates/tombi-formatter/src/format/: array_of_table.rs  comment.rs  root.rs  table.rs
crates/tombi-formatter/src/format/value/: array.rs  boolean.rs  inline_table.rs  string.rs
crates/tombi-formatter/src/formatter/: definitions.rs
crates/tombi-formatter/src/types/: alignment_width.rs
crates/tombi-formatter/tests/: test_format_options.rs
crates/tombi-glob/: Cargo.toml
crates/tombi-glob/src/: file_match.rs  file_search.rs  lib.rs  walk_dir.rs
crates/tombi-lsp/: Cargo.toml
crates/tombi-schema-store/: Cargo.toml
crates/tombi-text/: Cargo.toml
rust/tombi-cli/: build.rs
toml-test/src/: value.rs
www.schemastore.org/: tombi.json
www.schemastore.tombi/: tombi-document-directive.json
xtask/src/: app.rs  glue.rs
(+299 files in other folders)
