[package]
name = "tombi-glob"
version.workspace = true
edition.workspace = true

[dependencies]
fast-glob.workspace = true
ignore.workspace = true
rayon.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tombi-config.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
